added lift tests